
	./configure --with-readline=bsd
	Allow gnuplot to use the NetBSD editline library as an alternative to
	gnu readline. This adaptation was originally coded by Bastian Maerkisch
	and subsequently improved by Axel Thimm and by Tormod Volden.

	The routine term_init() is renamed to term_initialise() to avoid
	conflict with an identically named routine in libedit.

2008-12-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_key_sample do_rectangle): Fill style EMPTY
	should be no fill at all, rather than fill with background.
	Bug #2345832
	
2008-12-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Give an error message if the user requests any
	unimplemented features documented for 'set datafile binary'.
	Bug #2378535

2008-11-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary) src/graph3d.c (boundary3d)
	docs/gnuplot.doc docs/gnuplot.texi:
	`set {lrbt}margin at screen FRAC` should behave consistently for all
	four plot borders.  Ignore the current value of `set origin`.
	Bug #2345000

2008-11-27  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/gadgets.c src/gadgets.h src/graph3d.c src/save.c   
	src/set.c src/show.c src/unset.c NEWS:
	The docs say that 'set size ratio' is ignored in 3D;   make it so.
	New option 'set view equal_axes' that forces x and y axes in a 3D plot
	to use the same scale.  This is similar to 'set size square' in 2D.
	Bug #2004205. Feature request #2006851.

	* src/set.c (prune_dataticks): Fix typo causing ticlabel list corruption

2008-11-19  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_options): If no information is available about what
	default scalable font might be available we currently give up and fall
	back to a built in non-scalable font.  Now we try font "arial" before
	falling back.  Who knows, it might even be available.

2008-11-13  Ethan Merritt  <merritt@u.washington.edu>
